--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: José Luis Ricón
-email: artirj@gmail.com
+email: joseluisricon@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   José Luis Ricón's personal website
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://artirj.github.io" # the base hostname & protocol for your site
-twitter_username: ArtirKel
+#twitter_username: ArtirKel
 github_username:  artirj
 
 # Build settings
