--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,6 @@ description: > # this means to ignore newlines until "baseurl:"
   José Luis Ricón's personal website
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://artirj.github.io" # the base hostname & protocol for your site
-#twitter_username: ArtirKel
+twitter_username: ArtirKel
 github_username:  artirj
 
-# Build settings
-markdown: kramdown
-theme: jekyll-theme-minimal
