--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: José Luis Ricón
 email: joseluisricon@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   José Luis Ricón's personal website
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl:
 url: "https://artirj.github.io" # the base hostname & protocol for your site
 twitter_username: ArtirKel
 github_username:  artirj
