--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "José Luis Ricón"
 title_separator          : "-"
 name                     : &name "Jose Luis"
 description              : &description "personal description"
-url                      : https://joseluisricon.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : http://joseluisricon.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "artirj/artirj.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
