--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   bio              : "Engineer"
   location         : "Coventry, UK"
   employer         : "LTC"
-  googlescholar    : "https://scholar.google.com/citations?user=MlF4TgUAAAAJ&hl=es&oi=sra"
+  googlescholar    : "https://scholar.google.com/citations?hl=es&user=MlF4TgUAAAAJ"
   email            : "joseluisricon@gmail.com"
   uri              : 
   bitbucket        :
