--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ author:
   name             : "José Luis Ricón"
   avatar           : "profile.png"
   bio              : "Engineer"
-  location         : "Coventry, UK"
-  employer         : "LTC"
+  location         : "London, UK"
+  employer         : "Amey"
   googlescholar    : "https://scholar.google.com/citations?hl=es&user=MlF4TgUAAAAJ"
   email            : "joseluisricon@gmail.com"
   uri              : 
